Fix backend for the new view layout and requirements | fix js code

--- a/app/assets/javascripts/device_properties.js.erb
+++ b/app/assets/javascripts/device_properties.js.erb
@@ -6,9 +6,36 @@ function addNewDeviceProperty() {
     var lastDevicePropertyDomId = parseInt($deviceProperties.find('.device-property').last().attr('data-index'));
     if (!lastDevicePropertyDomId) { lastDevicePropertyDomId = 0; }
     var nextDevicePropertyDomId = lastDevicePropertyDomId + 1;
-    $devicePropertyTemplate.find('.device-property').attr('data-index', nextDevicePropertyDomId);
-    $devicePropertyTemplate.find('.remove-device-property').attr('data-index', nextDevicePropertyDomId);
-    $deviceProperties.append($devicePropertyTemplate.html());
+
+    var newDeviceProperty = $devicePropertyTemplate.clone();
+
+    newDeviceProperty.attr('data-index', nextDevicePropertyDomId);
+
+    var newDevicePropertyInputs =  newDeviceProperty.find('input');
+    newDevicePropertyInputs.each(function () {
+        var propertyName = $(this).attr('name');
+        if (propertyName) {
+            $(this).attr('name', propertyName.replace('INDEX', nextDevicePropertyDomId));
+        }
+        var propertyId = $(this).attr('id');
+        if (propertyId) {
+            $(this).attr('id', propertyId.replace('INDEX', nextDevicePropertyDomId));
+        }
+    });
+
+    var newDevicePropertySelects =  newDeviceProperty.find('select');
+    newDevicePropertySelects.each(function () {
+        var propertyName = $(this).attr('name');
+        if (propertyName) {
+            $(this).attr('name', propertyName.replace('INDEX', nextDevicePropertyDomId));
+        }
+        var propertyId = $(this).attr('id');
+        if (propertyId) {
+            $(this).attr('id', propertyId.replace('INDEX', nextDevicePropertyDomId));
+        }
+    });
+
+    $deviceProperties.append(newDeviceProperty);
 }
 
 function removeDeviceProperty() {
@@ -16,11 +43,11 @@ function removeDeviceProperty() {
 }
 
 function document_ready() {
-    $devicePropertyTemplate = $('#device-property-template');
-    $thisForm = $('#new_device');
-    $deviceProperties = $thisForm.find('#device-properties-wrapper');
+    $devicePropertyTemplate = $('#device-property-template').find('.device-property');
+    $thisForm = $(document.body).find('#device-form').find('form');
+    $deviceProperties = $thisForm.find('.device-properties-wrapper');
 
-    $thisForm.on('click', '#add-new-device-property-button', addNewDeviceProperty);
+    $thisForm.on('click', '.add-new-device-property-button', addNewDeviceProperty);
     $thisForm.on('click', '.remove-device-property-button', removeDeviceProperty);
 }
 
