--- a/app/views/devices/new.html.erb
+++ b/app/views/devices/new.html.erb
@@ -6,7 +6,7 @@
   <h1>Create Device</h1>
 </div>
 
-<%= render partial: 'device', object: @device, locals: { device_form_template: @device_form_template} %>
+<%= render partial: 'device', object: @device %>
 
 <hr>
 
