--- a/app/views/devices/edit.html.erb
+++ b/app/views/devices/edit.html.erb
@@ -5,7 +5,7 @@
 <div class="well">
   <h1>Editing Device</h1>
 </div>
-<%= render partial: 'device', object: @device, locals: { device_form_template: @device_form_template} %>
+<%= render partial: 'device', object: @device %>
 
 <hr>
 
