--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
       <% end %>
       <%= yield %>
       <%= render 'layouts/footer' %>
+      <%= debug( RUBY_VERSION ) if Rails.env.development? %>
       <%= debug( user_signed_in?.inspect ) if Rails.env.development? %>
       <%= debug( current_user.id  ) if user_signed_in? if Rails.env.development? %>
       <%= debug(user_session.inspect) if Rails.env.development? %>
