--- a/app/views/devices/index.html.erb
+++ b/app/views/devices/index.html.erb
@@ -7,9 +7,9 @@
 </div>
 
 <div class="row">
-  <div class="col-xs-5">Name</div>
-  <div class="col-xs-5">Location</div>
-  <div class="col-xs-2">Actions</div>
+  <div class="col-xs-5"><b>Name</b></div>
+  <div class="col-xs-5"><b>Location</b></div>
+  <div class="col-xs-2"><b>Actions</b></div>
 </div>
 
 <hr/>
