Create events, actions & schedules models | Small fixes

--- a/app/views/devices/show.html.erb
+++ b/app/views/devices/show.html.erb
@@ -105,5 +105,15 @@
   </div>
 </div>
 
+<!-- DEVICE'S SCHEDULES -->
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <h3 class="panel-title">Device's schedules</h3>
+  </div>
+  <div class="panel-body">
+
+  </div>
+</div>
+
 <%= link_to 'Edit', edit_device_path(@device) %> |
 <%= link_to 'Back', devices_path %>
