--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
 
       <%= debug(RUBY_VERSION) if Rails.env.development? %>
       <%= debug(user_signed_in?.inspect) if Rails.env.development? %>
-      <%= debug(current_user.id) if user_signed_in? if Rails.env.development? %>
+      <%= debug(current_user.devices.inspect) if user_signed_in? if Rails.env.development? %>
       <%= debug(user_session.inspect) if Rails.env.development? %>
       <%= debug(instance_variables) if Rails.env.development? %>
       <%= debug(local_variables) if Rails.env.development? %>
