Add bootstrap-datetimepicker gem

--- a/app/views/schedules/_form.html.erb
+++ b/app/views/schedules/_form.html.erb
@@ -28,7 +28,7 @@
     <div class="col-xs-3">
       <div class="form-group">
         <%= f.label :datetime %>
-        <%= f.datetime_local_field :datetime, class: 'form-control' %>
+        <%= f.datetime_select :datetime, class: 'form-control' %>
       </div>
     </div>
 
