--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,17 +14,17 @@
     <div class="collapse navbar-collapse" id="main-system-navbar-collapse">
       <ul class="nav navbar-nav navbar-right">
         <% if user_signed_in? %>
-          <li><%= link_to "Devices", devices_path %></li>
-          <li><%= link_to "Schedules", schedules_path %></li>
+          <li><a href="<%= devices_path %>">Devices</a></li>
+          <li><a href="<%= schedules_path %>">Schedules</a></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
               <span>Account</span>
               <span class="caret"></span>
             </a>
             <ul class="dropdown-menu">
-              <li><%= link_to "Settings", edit_user_registration_path %></li>
+              <li><%= link_to "My Profile", edit_user_registration_path %></li>
               <li role="separator" class="divider"></li>
-              <li><%= link_to "Sign out", destroy_user_session_path, method: "delete" %></li>
+              <li><%= link_to "Sign out (" + current_user.email + ")", destroy_user_session_path, method: "delete" %></li>
             </ul>
           </li>
         <% else %>
