--- a/app/views/devices/_device_property.html.erb
+++ b/app/views/devices/_device_property.html.erb
@@ -4,7 +4,8 @@
 
 <% if device_property.errors.any? %>
   <div id="error-explanation">
-    <h2><%= pluralize(device_property.errors.count, 'error') %> prohibited this device property from being valid:</h2>
+    <h2><%= pluralize(device_property.errors.count, 'error') %> prohibited this
+      device property from being valid:</h2>
     <ul>
       <% device_property.errors.full_messages.each do |message| %>
         <li><%= message %></li>
@@ -13,7 +14,7 @@
   </div>
 <% end %>
 
-<div class="device-property"  data-index="<%= device_property_index %>" >
+<div class="device-property" data-index="<%= device_property_index %>">
 
   <%= fields_for prefix, device_property, index: device_property_index do |property_form| %>
 
@@ -57,8 +58,8 @@
 
       <div class="col-xs-1">
         <div class="field form-group">
-          <%= property_form.select(:auto, {}, {},  { class: 'form-control' } ) do %>
-            <% [['ON', 1], ['OFF', 0] ].each do |c| -%>
+          <%= property_form.select(:auto, {}, {}, { class: 'form-control' }) do %>
+            <% [['ON', 1], ['OFF', 0]].each do |c| -%>
               <%= content_tag(:option, c.first, value: c.last) %>
             <% end %>
           <% end %>
