--- a/app/views/schedules/_form.html.erb
+++ b/app/views/schedules/_form.html.erb
@@ -1,7 +1,8 @@
 <%= form_for(schedule) do |f| %>
   <% if schedule.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(schedule.errors.count, "error") %> prohibited this schedule from being saved:</h2>
+      <h2><%= pluralize(schedule.errors.count, "error") %> prohibited this
+        schedule from being saved:</h2>
       <ul>
         <% schedule.errors.full_messages.each do |message| %>
           <li><%= message %></li>
