--- a/app/views/devices/_device.html.erb
+++ b/app/views/devices/_device.html.erb
@@ -46,8 +46,8 @@
     <hr/>
 
     <div class="field form-group">
-      <button type="button" class="add-new-device-property-button form-control">Add
-        New Device Property
+      <button type="button" class="add-new-device-property-button form-control">
+        <span>Add New Device Property</span>
       </button>
     </div>
 
