--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -6,15 +6,33 @@
 
 <div class="row">
 
-  <div class="col-xs-2">
+  <div class="col-xs-3">
     <div class="field form-group">
       <%= label ValueType, :id %>
     </div>
   </div>
 
-  <div class="col-xs-2">
+  <div class="col-xs-3">
     <div class="field form-group">
       <%= label ValueType, :name %>
+    </div>
+  </div>
+
+  <div class="col-xs-3">
+    <div class="field form-group">
+      <%= label ValueType, :primitive_type_id %>
+    </div>
+  </div>
+
+  <div class="col-xs-2">
+    <div class="field form-group">
+      <%= label ValueType, :unsigned %>
+    </div>
+  </div>
+
+  <div class="col-xs-1">
+    <div class="field form-group">
+      <label>Actions</label>
     </div>
   </div>
 
@@ -25,12 +43,17 @@
 
     <%= render partial: 'value_type_form', collection: @value_types, as: :value_type %>
 
+    <div class="form-group">
+      <button type="button" class="action-button active add-new-value-type form-control">
+        <span>New Value Type</span>
+      </button>
+    </div>
+
     <div class="actions">
       <button type="submit">Update</button>
     </div>
 
   <% end %>
-
 </div>
 
 <hr>
