--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -4,49 +4,51 @@
 
 <h1>Value Types</h1>
 
-<div class="row">
-
-  <div class="col-xs-3">
-    <div class="field form-group">
-      <%= label ValueType, :id %>
-    </div>
-  </div>
-
-  <div class="col-xs-3">
-    <div class="field form-group">
-      <%= label ValueType, :name %>
-    </div>
-  </div>
-
-  <div class="col-xs-3">
-    <div class="field form-group">
-      <%= label ValueType, :primitive_type_id %>
-    </div>
-  </div>
-
-  <div class="col-xs-2">
-    <div class="field form-group">
-      <%= label ValueType, :unsigned %>
-    </div>
-  </div>
-
-  <div class="col-xs-1">
-    <div class="field form-group">
-      <label>Actions</label>
-    </div>
-  </div>
-
-</div>
-
-<div class="value-types-form-container">
+<div id="value-types-form-container">
   <%= form_tag(admin_path) do %>
 
-    <%= render partial: 'value_type_form', collection: @value_types, as: :value_type %>
+    <div class="row">
+      <div class="col-xs-12">
+        <div class="form-group">
+          <button type="button" class="action-button active add-new-value-type form-control">
+            <span>New Value Type</span>
+          </button>
+        </div>
+      </div>
+    </div>
 
-    <div class="form-group">
-      <button type="button" class="action-button active add-new-value-type form-control">
-        <span>New Value Type</span>
-      </button>
+    <div id="value-types-header">
+      <div class="row">
+
+        <div class="col-xs-3">
+          <div class="field form-group">
+            <%= label ValueType, :name %>
+          </div>
+        </div>
+
+        <div class="col-xs-3">
+          <div class="field form-group">
+            <%= label ValueType, :primitive_type_id %>
+          </div>
+        </div>
+
+        <div class="col-xs-3">
+          <div class="field form-group">
+            <%= label ValueType, :unsigned %>
+          </div>
+        </div>
+
+        <div class="col-xs-3">
+          <div class="field form-group">
+            <label>Actions</label>
+          </div>
+        </div>
+
+      </div>
+    </div>
+
+    <div id="value-types-container">
+      <%= render partial: 'value_type_form', collection: @value_types, as: :value_type %>
     </div>
 
     <div class="actions">
@@ -54,6 +56,10 @@
     </div>
 
   <% end %>
+</div>
+
+<div id="value-type-template" class="hidden">
+  <%= render partial: 'value_type_form', locals: { value_type: ValueType.new } %>
 </div>
 
 <hr>
