--- a/app/views/devices/_device_property.html.erb
+++ b/app/views/devices/_device_property.html.erb
@@ -20,7 +20,7 @@
 
     <%= property_form.hidden_field :id %>
 
-    <div class="row">
+    <div class="row form-row">
 
       <div class="col-xs-2">
         <div class="field form-group">
@@ -68,7 +68,7 @@
 
       <div class="col-xs-1">
         <div class="field form-group">
-          <input type="button" class="remove-device-property-button form-control" value="X"/>
+          <input type="button" class="action-button active remove-form-row  form-control" value="X"/>
         </div>
       </div>
 
