Make value types to post

--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -5,7 +5,7 @@
 <h1>Value Types</h1>
 
 <div id="value-types-form-container">
-  <%= form_tag(admin_path) do %>
+  <%= form_tag(admin_valueTypes_path) do %>
 
     <div class="row">
       <div class="col-xs-12">
