--- a/app/views/devices/show.html.erb
+++ b/app/views/devices/show.html.erb
@@ -29,7 +29,7 @@
   </div>
   <div class="panel-body">
 
-    <% @device.device_properties.each do |property| %>
+    <% @device.properties.each do |property| %>
 
       <div class="row">
 
