--- a/app/views/devices/_device_property_form.html.erb
+++ b/app/views/devices/_device_property_form.html.erb
@@ -4,38 +4,38 @@
 
     <div class="col-xs-2">
       <div class="field form-group">
-        <%= label DeviceProperty, :name, 'Prop Name' %>
+        <%= label Property, :name, 'Prop Name' %>
       </div>
     </div>
 
     <div class="col-xs-2">
       <div class="field form-group">
-        <%= label DeviceProperty, :value_type_id %>
+        <%= label Property, :value_type_id %>
       </div>
     </div>
 
     <div class="col-xs-2">
       <div class="field form-group">
-        <%= label DeviceProperty, :value_min %>
+        <%= label Property, :value_min %>
       </div>
     </div>
 
     <div class="col-xs-2">
       <div class="field form-group">
-        <%= label DeviceProperty, :value_max %>
+        <%= label Property, :value_max %>
       </div>
     </div>
 
 
     <div class="col-xs-2">
       <div class="field form-group">
-        <%= label DeviceProperty, :value %>
+        <%= label Property, :value %>
       </div>
     </div>
 
     <div class="col-xs-1">
       <div class="field form-group">
-        <%= label DeviceProperty, :auto %>
+        <%= label Property, :auto %>
       </div>
     </div>
 
@@ -51,5 +51,5 @@
 </div>
 
 <div class="device-properties-wrapper">
-  <%= render partial: 'device_property', collection: device_properties %>
+  <%= render partial: 'device_property', collection: properties %>
 </div>
