Bugfix render call

--- a/app/views/admin/_value_type_form_element.html.erb
+++ b/app/views/admin/_value_type_form_element.html.erb
@@ -13,13 +13,13 @@
   </div>
 <% end %>
 
-<div class="value-type" data-index="<%= value_type_index %>">
+<div class="value-type form-row" data-index="<%= value_type_index %>">
 
   <%= fields_for prefix, value_type, index: value_type_index do |value_type_form| %>
 
     <%= value_type_form.hidden_field :id %>
 
-    <div class="row form-row">
+    <div class="row">
 
       <div class="col-xs-3">
         <div class="form-group">
@@ -30,7 +30,7 @@
       <div class="col-xs-3">
         <div class="form-group">
           <%= value_type_form.select(:primitive_type_id, {}, {}, { class: 'form-control' }) do %>
-            <% options_for_select(@value_types_primitive_types, value_type.primitive_type_id) %>
+            <% options_for_select(@primitive_types, value_type.primitive_type_id) %>
           <% end %>
         </div>
       </div>
