--- a/app/views/devices/_device_form.html.erb
+++ b/app/views/devices/_device_form.html.erb
@@ -62,6 +62,6 @@
   <% end -%>
 
   <div id="device-property-template" class="hidden">
-    <%= render partial: 'device_property', locals: { device_property: Property.new } %>
+    <%= render partial: 'device_property_form_element', locals: { device_property: Property.new } %>
   </div>
 </div>
