--- a/app/views/devices/new.html.erb
+++ b/app/views/devices/new.html.erb
@@ -1,12 +1,10 @@
-<!-- This provides the title for the page-->
 <% provide(:title, 'Create New Device') %>
-<!-- Dont remove the previous -->
 
 <div class='well'>
   <h1>Create Device</h1>
 </div>
 
-<%= render partial: 'device', object: @device %>
+<%= render partial: 'device_form', locals: { device: @device } %>
 
 <hr>
 
