--- a/app/views/devices/_device_property_form.html.erb
+++ b/app/views/devices/_device_property_form.html.erb
@@ -51,5 +51,5 @@
 </div>
 
 <div class="device-properties-wrapper">
-  <%= render partial: 'device_property', collection: properties %>
+  <%= render partial: 'device_property_form_element', collection: properties, as: 'device_property' %>
 </div>
