--- a/app/views/devices/index.html.erb
+++ b/app/views/devices/index.html.erb
@@ -1,6 +1,4 @@
-<!-- This provides the title for the page-->
-<% provide(:title, "Device List") %>
-<!-- Dont remove the previous -->
+<% provide(:title, 'Device List') %>
 
 <div class="well">
   <h1>Devices List</h1>
