--- a/app/views/devices/show.html.erb
+++ b/app/views/devices/show.html.erb
@@ -1,6 +1,4 @@
-<!-- This provides the title for the page-->
-<% provide(:title, "Device Overview") %>
-<!-- Dont remove the previous -->
+<% provide(:title, 'Device Overview') %>
 
 <div class="well">
   <h1>Overview</h1>
@@ -51,7 +49,7 @@
       <% end %>
 
     </div>
-    
+
   </div>
 <% end %>
 
