--- a/app/views/schedules/edit.html.erb
+++ b/app/views/schedules/edit.html.erb
@@ -1,4 +1,8 @@
-<h1>Editing Schedule</h1>
+<% provide(:title, 'Edit Schedule') %>
+
+<div class="well">
+  <h1>Editing Schedule</h1>
+</div>
 
 <%= render 'form', schedule: @schedule %>
 
