--- a/app/views/schedules/index.html.erb
+++ b/app/views/schedules/index.html.erb
@@ -1,6 +1,11 @@
+<% provide(:title, 'Schedules List') %>
+
 <p id="notice"><%= notice %></p>
 
-<h1>Schedules</h1>
+<div class="well">
+  <h1>Schedules</h1>
+</div>
+
 
 <table>
   <thead>
