--- a/app/views/schedules/new.html.erb
+++ b/app/views/schedules/new.html.erb
@@ -1,4 +1,8 @@
-<h1>New Schedule</h1>
+<% provide(:title, 'Add Schedule') %>
+
+<div class="well">
+  <h1>New Schedule</h1>
+</div>
 
 <%= render 'form', schedule: @schedule %>
 
