--- a/app/views/schedules/show.html.erb
+++ b/app/views/schedules/show.html.erb
@@ -1,3 +1,5 @@
+<% provide(:title, 'Schedule Preview') %>
+
 <p id="notice"><%= notice %></p>
 
 <%= link_to 'Edit', edit_schedule_path(@schedule) %> |
