--- a/app/views/schedules/new.html.erb
+++ b/app/views/schedules/new.html.erb
@@ -4,6 +4,8 @@
   <h1>New Schedule</h1>
 </div>
 
-<%= render 'form', schedule: @schedule %>
+<%= render 'schedule_form', schedule: @schedule %>
+
+<hr/>
 
 <%= link_to 'Back', schedules_path %>
