--- a/app/views/schedules/_schedule_form.html.erb
+++ b/app/views/schedules/_schedule_form.html.erb
@@ -16,14 +16,12 @@
 
     <div class="row">
 
-      <div class="col-xs-3">
+      <div class="col-xs-2">
         <div class="form-group">
           <%= schedule_form.label :device_uid %>
-          <%= schedule_form.select(:device_uid, {}, {}, { class: 'form-control' }) do %>
-            <% if @devices.any? %>
-              <% @devices.each do |c| %>
-                <%= content_tag(:option, c.name, value: c.uid) %>
-              <% end %>
+          <%= schedule_form.select(:device_uid, {}, { include_blank: '- Select device -' }, { class: 'form-control' }) do %>
+            <% if @availiable_devices.any? %>
+              <% options_for_select(@availiable_devices, schedule.device_uid) %>
             <% end %>
           <% end %>
         </div>
@@ -36,14 +34,25 @@
         </div>
       </div>
 
-      <div class="col-xs-3">
+      <div class="col-xs-2">
         <div class="form-group">
           <%= schedule_form.label :is_recurrent %>
-          <%= schedule_form.check_box :is_recurrent, class: 'form-control' %>
+          <div class="checkbox checkbox-primary">
+            <%= schedule_form.check_box :is_recurrent %>
+          </div>
         </div>
       </div>
 
       <div class="col-xs-3">
+        <div class="form-group">
+          <%= schedule_form.label :repeat_every %>
+          <%= schedule_form.select(:repeat_every, {}, { include_blank: '- Select period -' }, { class: 'form-control' }) do %>
+            <% options_for_select(@repeat_every_list, schedule.repeat_every) %>
+          <% end %>
+        </div>
+      </div>
+
+      <div class="col-xs-2">
         <div class="form-group">
           <%= schedule_form.label :recurrence_period %>
           <%= schedule_form.text_field :recurrence_period, class: 'form-control' %>
